# little-doomdepths

./: CMakeLists.txt  colors.h  defines.h  display.c  display.h  game.c  game.h  init_inventory.c  init_inventory.h  init_level.c  init_level.h  init_monster.c  init_monster.h  loop.c  main.c  monster.c  monster.h  player.c  player.h  player_attack.c  player_attack.h  structs.h  tables.sql
cfiles/: db_connexion.c  display.c  free.c  free_player.c  free_zones.c  free_zones.h  game.c  loop.c  main.c  rand.c  sqlite_test.c  sqlite_test.h  utils.c
cfiles/armor/: draw_armor.c  init_armor.c  init_random_armor_name.c
cfiles/free/: free_player.c  free_zones.c
cfiles/init/: init_boss.c  init_inventory.c  init_level.c  init_monster.c  init_spell.c  init_store.c
cfiles/inventory/: display_inventory.c  display_inventory_armors.c  display_inventory_potions.c  display_inventory_weapons.c  inventory.c  potion.c
cfiles/level/: display_level_loot.c  display_level_loot_armors.c  display_level_loot_weapons.c  next_level.c
cfiles/monsters/: dead_monster.c  display_dead_monster.c  display_monster_loot.c  monster.c  monster_sprite.c  monster_spritev2.c
cfiles/player/: display_player_equipment.c  display_player_stats.c  has_player_a_save.c  player.c  player_attack.c  player_spell.c
cfiles/quests/: check_quests.c  create_quests.c  display_quests.c
cfiles/saves/: create_save.c  create_save.h  db_connexion.c  destroy_save.c  save_inventory.c  save_inventory.h  save_levels.c  save_player.c  save_player.h  save_player_spells.c  save_zones.c
cfiles/saves/create-save/: create_save.c  save_inventory.c  save_player.c  save_player_quests.c  save_player_spells.c  save_zones.c
cfiles/saves/load-save/: load_game.c  load_level_monsters.c  load_levels.c  load_player.c  load_player_inventory.c  load_player_quests.c  load_player_spells.c  load_zones.c
cfiles/spell/: display_spell.c
cfiles/store/: display_store.c
cfiles/weapon/: draw_weapon.c  init_random_weapon_name.c  init_weapon.c
cfiles/zones/: create_map_from_tab.c  create_zone.c  display_zone.c  generate_chests.c  generate_random_cell.c  generate_random_map.c  init_zone.c  init_zones.c  next_zone.c  next_zone.h
headers/: db_connexion.h  display.h  free.h  free_player.h  game.h  loop.h  rand.h  utils.h
headers/armor/: draw_armor.h  init_armor.h  init_random_armor_name.h
headers/free/: free_player.h  free_zones.h
headers/includes/: defines.h  quests_defines.h  structs.h
headers/init/: init_boss.h  init_inventory.h  init_level.h  init_monster.h  init_spell.h  init_store.h
headers/inventory/: display_inventory.h  display_inventory_armors.h  display_inventory_potions.h  display_inventory_weapons.h  inventory.h  potion.h
headers/level/: display_level_loot.h  display_level_loot_armors.h  display_level_loot_weapons.h  next_level.h
headers/monsters/: dead_monster.h  display_dead_monster.h  display_monster_loot.h  monster.h  monster_sprite.h  monster_spritev2.h
headers/player/: display_player_equipment.h  display_player_stats.h  has_player_a_save.h  player.h  player_attack.h  player_spell.h
headers/quests/: check_quests.h  create_quests.h  display_quests.h
headers/saves/: create_save.h  db_connexion.h  destroy_save.h  save_inventory.h  save_levels.h  save_player.h  save_player_spells.h  save_zones.h
headers/saves/create-save/: create_save.h  save_inventory.h  save_player.h  save_player_quests.h  save_player_spells.h  save_zones.h
headers/saves/load-save/: load_game.h  load_level_monsters.h  load_levels.h  load_player.h  load_player_inventory.h  load_player_quests.h  load_player_spells.h  load_zones.h
headers/spell/: display_spell.h
headers/store/: display_store.h
headers/weapon/: draw_weapon.h  init_random_weapon_name.h  init_weapon.h
headers/zones/: create_map_from_tab.h  create_zone.h  define_zones.h  display_zone.h  generate_chests.h  generate_random_cell.h  generate_random_map.h  init_zone.h  init_zones.h  next_zone.h
sqlite3/: shell.c
