cmake_minimum_required(VERSION 3.26)
project(doom C)

set(CMAKE_C_STANDARD 11)


add_executable(doom cfiles/main.c
        headers/includes/structs.h
        headers/includes/defines.h
        cfiles/game.c
        headers/game.h
        cfiles/display.c
        headers/display.h
        cfiles/player/player.c
        headers/player/player.h
        headers/includes/colors.h
        cfiles/init/init_monster.c
        headers/init/init_monster.h
        cfiles/init/init_inventory.c
        headers/init/init_inventory.h
        cfiles/init/init_level.c
        headers/init/init_level.h
        cfiles/loop.c
        headers/loop.h
        cfiles/player/player_attack.c
        headers/player/player_attack.h
        cfiles/monsters/monster.c
        headers/monsters/monster.h
        cfiles/inventory/inventory.c
        headers/inventory/inventory.h
        cfiles/weapon/init_weapon.c
        headers/weapon/init_weapon.h
        cfiles/inventory/potion.c
        headers/inventory/potion.h
        cfiles/monsters/monster_sprite.c
        headers/monsters/monster_sprite.h
        cfiles/inventory/display_inventory.c
        headers/inventory/display_inventory.h
        cfiles/armor/init_armor.c
        headers/armor/init_armor.h
        cfiles/inventory/display_inventory_potions.c
        headers/inventory/display_inventory_potions.h
        cfiles/inventory/display_inventory_armors.c
        headers/inventory/display_inventory_armors.h
        cfiles/inventory/display_inventory_weapons.c
        headers/inventory/display_inventory_weapons.h
        headers/zones/define_zones.h
        cfiles/zones/generate_random_map.c
        headers/zones/generate_random_map.h
        cfiles/zones/create_zone.c
        headers/zones/create_zone.h
        cfiles/zones/init_zones.c
        headers/zones/init_zones.h
        cfiles/zones/display_zone.c
        headers/zones/display_zone.h
        sqlite3/sqlite3.c
        sqlite3/sqlite3.h
        cfiles/spell/display_spell.c
        headers/spell/display_spell.h
        cfiles/init/init_spell.c
        headers/init/init_spell.h
        cfiles/player/player_spell.c
        headers/player/player_spell.h
        cfiles/saves/create-save/create_save.c
        headers/saves/create-save/create_save.h
        cfiles/saves/create-save/save_inventory.c
        headers/saves/create-save/save_inventory.h
        cfiles/saves/create-save/save_player.c
        headers/saves/create-save/save_player.h
        cfiles/saves/create-save/save_player_spells.c
        headers/saves/create-save/save_player_spells.h
        cfiles/player/has_player_a_save.c
        headers/player/has_player_a_save.h
        cfiles/db_connexion.c
        headers/db_connexion.h
        cfiles/saves/create-save/save_zones.c
        headers/saves/create-save/save_zones.h
        cfiles/saves/load-save/load_game.c
        headers/saves/load-save/load_game.h
        cfiles/saves/load-save/load_zones.c
        headers/saves/load-save/load_zones.h
        cfiles/saves/load-save/load_levels.c
        headers/saves/load-save/load_levels.h
        cfiles/saves/load-save/load_level_monsters.c
        headers/saves/load-save/load_level_monsters.h
        cfiles/saves/load-save/load_player.c
        headers/saves/load-save/load_player.h
        cfiles/saves/load-save/load_player_inventory.c
        headers/saves/load-save/load_player_inventory.h
        cfiles/saves/load-save/load_player_spells.c
        headers/saves/load-save/load_player_spells.h
        cfiles/saves/destroy_save.c
        headers/saves/destroy_save.h
        cfiles/player/display_player_equipment.c
        headers/player/display_player_equipment.h
        cfiles/player/display_player_stats.c
        headers/player/display_player_stats.h
        cfiles/quests/create_quests.c
        headers/quests/create_quests.h
        cfiles/quests/display_quests.c
        headers/quests/display_quests.h
        cfiles/level/display_level_loot_weapons.c
        cfiles/level/display_level_loot.c
        cfiles/level/display_level_loot_armors.c
        headers/level/display_level_loot.h
        headers/level/display_level_loot_weapons.h
        headers/level/display_level_loot_armors.h
        cfiles/monsters/display_monster_loot.c
        headers/monsters/display_monster_loot.h
        cfiles/weapon/draw_weapon.c
        headers/weapon/draw_weapon.h
        cfiles/armor/draw_armor.c
        headers/armor/draw_armor.h
        cfiles/quests/check_quests.c
        headers/quests/check_quests.h
        headers/includes/quests_defines.h
        cfiles/rand.c
        headers/rand.h
        cfiles/armor/init_random_armor_name.c
        headers/armor/init_random_armor_name.h
        cfiles/weapon/init_random_weapon_name.c
        headers/weapon/init_random_weapon_name.h
        cfiles/saves/create-save/save_player_quests.c
        headers/saves/create-save/save_player_quests.h
        cfiles/saves/load-save/load_player_quests.c
        headers/saves/load-save/load_player_quests.h
)

